2002-03-10  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Makefile.in (tarball): Fix permissions.

2002-03-09  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-accept-post-header-option): Use "-help" option
	instead of "-version" option.

2002-03-07  Hideyuki SHIRAI  <shirai@meadowy.org>

	* mew-w3m.el (mew-w3m-cid-retrieve): Return lowercase string
	always because `w3m-image-type-alist' has lowercase keys.

2002-03-07  Yoichi NAKAYAMA  <yoichi@eken.phys.nagoya-u.ac.jp>

	* w3m.el (w3m-lynx-like-map): Switch J and K so as to behave like
	w3m.

2002-03-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* aclocal.m4 (AC_EXAMINE_PACKAGEDIR): Use `(eq 0 foo)' instead of
	`(zerop foo)' because foo might not be a number.
	(AC_PATH_ICONDIR): Ditto.

2002-03-07  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-decoder-alist): Change default commands to `gzip' and
	`bzip2' instead of `gunzip' and `bunzip2' because some broken OS
	and its environment does not work them.
	(w3m-exec-filter): Avoid the lock of process filter when w3m ask
	`accept ?' for SSL certificate.

2002-03-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* Makefile.in (datadir): New variable.

2002-03-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* Makefile.in (install): Don't chdir to shimbun/ while installing
	shimbun modules.
	(install-icons): Don't chdir to icons/ while installing icons.

2002-03-02  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (emacs-w3m-version): Release 1.2.5.

	* Merge fixes of the shimbun module on the main trunk.

2002-02-26  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (emacs-w3m-version): Incremted to 1.2.5rc1.

2002-02-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-read-file-name): Strip the query part from a default
	file name.
	(w3m-download): Ditto.
	(w3m-url-components-regexp): Move forward.

	* mime-w3m.el: Always require `font' under XEmacs.

	* shimbun/sb-debian.el (shimbun-debian-groups): Add debian-med,